[package]
name = "trash-utils"
version = "0.1.1"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cross platform crate for interacting with the trash"
readme = "README.md"
repository = "https://github.com/cjbassi/trash-utils-rs"

[dependencies]
platform-dirs = "0.1.0"
chrono = "0.4.6"
path-clean = "0.1.0"
nom = "5.0.0"
itertools = "0.8.0"
snafu = "0.5.0"
